# dotfiles

./: .bashrc  .gitconfig  .gitignore  .netrc  .profile  .texrc  .vimrc  .zshrc  AGENTS.md  PYTHON_CONVENTIONS.md  README.md  avante.md  backup_dotfiles.sh  coc-settings.json  file.md  nvim  opencode.json
-/: test.md
.pi/agents/: test-agent.md
agentic/agents/: builder.md  code-explorer.md  planner.md  reviewer.md  web-explorer.md
agentic/llamacpp/: makefile  preset.ini
agentic/opencode/: opencode.json
agentic/opencode/agents/: build.md  noninteractive.md  orchestrator.md  review.md
agentic/pi/: AGENTS.md  PLAN.md  README.md  SYSTEM.md  keybindings.json  models.json  models.json.example  settings.json  setup.sh
agentic/pi/agents/: builder.md  code-explorer.md  explorer.md  memory-audit.md  planner.md  reviewer.md  web-explorer.md
agentic/pi/extensions/: README.md  eslint.config.mjs  memory-audit.ts  package-lock.json  package.json  tsconfig.json
agentic/pi/extensions/telegram-bridge/: .env.example  README.md  pi-telegram-bridge.service  pyproject.toml  setup-systemd.sh  start.sh  stop.sh
agentic/pi/extensions/telegram-bridge/src/: sessions.json
agentic/pi/extensions/telegram-bridge/src/scripts/: bridge.py
agentic/pi/prompts/: handle-pr-reviews.md  implement-interactive.md  implement-minimal.md  implement-parallel.md  implement-quick.md  implement-strict.md  implement-with-pr.md  implement.md  plan-and-build.md  plan-build-review.md  plan.md  review.md  update-agents-md.md
agentic/pi/themes/: gruvbox.json
agentic/pi/web-ui/: PLAN.md
agentic/skills/: alexandra-bc  alexandra-confluence  alexandra-vera  hf-cli
agentic/skills/agent-browser/: SKILL.md
agentic/skills/agents-md/: README.md  SKILL.md
agentic/skills/bolig-dk/: README.md  SKILL.md  pyproject.toml
agentic/skills/bolig-dk/bolig_dk/: main.py
agentic/skills/bolig-dk/tests/: test.ts
agentic/skills/boligportal-dk/: README.md  SKILL.md  (+1 more)
agentic/skills/citizen-dk/: README.md  SKILL.md  pyproject.toml
agentic/skills/citizen-dk/citizen_dk/: __init__.py  main.py
agentic/skills/citizen-dk/tests/: test.ts
agentic/skills/docx/: .gitignore  README.md  SKILL.md  pyproject.toml
agentic/skills/docx/docx_surgeon/: __init__.py  main.py
agentic/skills/docx/tests/: test_main.py
agentic/skills/email/: EMAIL_PLAN.md  SKILL.md  login.py  pyproject.toml
agentic/skills/email/email_cli/: __init__.py  backend.py  base.py  browser.py  cli_parser.py  commands.py  config.py  credentials.py  display.py  main.py  models.py  owa.py
agentic/skills/email/email_cli/backends/: __init__.py  base.py  graph.py  imap_smtp.py  owa.py  owa.py.bak
agentic/skills/email/tests/: test.ts
agentic/skills/freshrss/: .gitignore  README.md  SKILL.md  pyproject.toml
agentic/skills/freshrss/freshrss/: __init__.py  main.py
agentic/skills/freshrss/tests/: test.ts  test_freshrss.py
agentic/skills/gmail/: .gitignore  README.md  SKILL.md  pyproject.toml
agentic/skills/gmail/gmail_cli/: __init__.py  auth.py  gmail.py  main.py
agentic/skills/image-generate/: SKILL.md  pyproject.toml
agentic/skills/image-generate/image_generate_cli/: __init__.py  main.py
agentic/skills/kultunaut-dk/: README.md  SKILL.md  pyproject.toml
agentic/skills/kultunaut-dk/kultunaut_dk/: __init__.py  main.py
agentic/skills/kultunaut-dk/tests/: test.ts
agentic/skills/lex-dk/: README.md  SKILL.md  pyproject.toml
agentic/skills/lex-dk/lex_dk/: __init__.py  main.py
agentic/skills/lex-dk/tests/: test.ts
agentic/skills/linkedin/: .gitignore  SKILL.md  pyproject.toml
agentic/skills/linkedin/linkedin_skill/: __init__.py  credentials.py  main.py
agentic/skills/linkedin/tests/: test.ts
agentic/skills/media-dk/: README.md  SKILL.md  pyproject.toml
agentic/skills/media-dk/media_dk/: __init__.py  main.py
agentic/skills/media-dk/tests/: test.ts
agentic/skills/retsinformation-dk/: README.md  SKILL.md  evals.jsonl  pyproject.toml  retsinformation_dk_api.py
agentic/skills/retsinformation-dk/retsinformation_dk/: __init__.py  main.py
agentic/skills/retsinformation-dk/tests/: test.ts
agentic/skills/skat-dk/: README.md  SKILL.md  evals.jsonl  pyproject.toml  skat_dk_api.py
agentic/skills/skat-dk/skat_dk/: __init__.py  main.py
agentic/skills/skat-dk/tests/: test.ts
agentic/skills/sundhed-dk/: README.md  SKILL.md  evals.jsonl  pyproject.toml  sundhed_dk_api.py
agentic/skills/sundhed-dk/sundhed_dk/: __init__.py
agentic/skills/sundhed-dk/tests/: test.ts
agentic/skills/transport-dk/: README.md  SKILL.md  pyproject.toml
agentic/skills/transport-dk/tests/: test.ts
agentic/skills/transport-dk/transport_dk/: __init__.py  main.py
agentic/skills/virk-dk/: README.md  SKILL.md  datacvr_api.py  pyproject.toml  virk_dk_api.py
agentic/skills/virk-dk/tests/: test.ts
agentic/skills/virk-dk/virk_dk/: __init__.py  cvr.py  main.py  web.py
agentic/skills/xlsx/: README.md  SKILL.md  pyproject.toml
agentic/skills/xlsx/tests/: test_main.py
agentic/skills/xlsx/xlsx_surgeon/: __init__.py  main.py
agentic/telegram-bot/: README.md  bot.py  config.example.py
llama.cpp/: makefile  preset.ini
nvim/: coc-settings.json  init.lua  lazy-lock.json
opencode/: opencode.json
opencode/agents/: browser.md  build-with-worktree.md.disabled  build.md  documentation.md  explore.md  general.md  orchestrator-with-worktrees.md.disabled  orchestrator.md  plan-build-review.md  plan-review.md  plan.md  quick-build.md  review.md  solo.md  todo.md  worktree_admin.md  worktree_admin.md.disabled
opencode/commands/: cancel-ralph.md  ralph-loop.md
opencode/skills/: README.md
opencode/skills/alexandra-confluence/: .env.template  README.md  SKILL.md  alexandra_confluence.py  evals.jsonl  pyproject.toml
opencode/skills/alexandra-confluence/scripts/: _constants.py  auth.py  cli_dispatch.py  cli_parser.py  http.py  main.py
opencode/skills/alexandra-confluence/scripts/resources/: pages.py  projects.py  slides_core.py  slides_query.py  slides_write.py  spaces.py
opencode/skills/alexandra-confluence/scripts/utils/: pages.py  parsing.py
(+280 files in other folders)
