[project]
name = "bolig-dk"
version = "1.0.0"
description = "CLI for Danish housing — rentals (boligportal.dk) and for-sale (boligsiden.dk)"
requires-python = ">=3.12"

[project.scripts]
bolig = "bolig_dk.main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
