[project]
name = "gmail-cli"
version = "0.1.0"
description = "CLI for Gmail via Google's REST API — list, search, read, send, draft, label, delete"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.0.0",
]

[project.scripts]
gmail = "gmail_cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"
