[project]
name = "kultunaut-dk"
version = "1.0.0"
description = "CLI for KultuNaut.dk — Denmark's electronic cultural events guide"
requires-python = ">=3.12"

[project.scripts]
kultunaut = "kultunaut_dk.main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
