[project]
name = "linkedin-skill"
version = "1.0.0"
description = "CLI for managing Dan's LinkedIn presence via agent-browser"
requires-python = ">=3.12"

[project.scripts]
linkedin = "linkedin_skill.main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
