[project]
name = "retsinformation-dk"
version = "1.0.0"
description = "CLI for retsinformation.dk — Denmark's central legal information portal"
requires-python = ">=3.12"

[project.scripts]
retsinformation = "retsinformation_dk.main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
