[project]
name = "alexandra-confluence"
version = "0.1.0"
description = "CLI for Alexandra's internal Confluence at confluence.alexandra.dk"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
alex-confluence = "scripts.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
