[project]
name = "telegram-bridge"
version = "0.1.0"
description = "Telegram bridge for Pi agent"
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot>=21.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "ty>=0.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
